fix parallax scrolling on iOS

--- a/roobell.css
+++ b/roobell.css
@@ -25,7 +25,6 @@ strong {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  background-attachment: fixed;
   text-align: center;
   margin: auto;
 }
@@ -54,6 +53,7 @@ li {
 }
 
 #gallery {
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -66,6 +66,10 @@ li {
 }
 
 @media screen and (min-width: 768px) {
+  #splash-image {
+    background-attachment: fixed;
+  }
+
   #about {
     margin: 0 15%;
   }
